...
    var localizedDescription: String {
        switch self {
        case .negativeNumbers(let numbers):
            let numberList = numbers.map(String.init).joined(separator: ",")
            return "negative numbers not allowed \(numberList)"
        case .invalidInput:
            return "invalid input"
        }
    }
}

